--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,5 +1,5 @@
-
-  <div class="fixed-top">
+<!-- 
+  <div  >
       <nav class="navbar  navbar-expand-lg   border-dark navbar-light bg-light">
       <div class="logo-img" *ngFor="let data of footerDetails">
           <a class="navbar-brand">
@@ -15,11 +15,14 @@
     [ngClass]="{'show': navbarShow}">
     <div class="navbar-nav">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link navText" href="#"> <b>Login</b></a>
+        <li class="nav-item" *ngIf="!this.sharedService.getLogin()">
+          <a class="nav-link navText" routerLink="/account/signin">login</a>
         </li>
+        <li class="nav-item" *ngIf="this.sharedService.getLogin()">
+            <a class="nav-link navText"(click)="logOut()">logout</a>
+          </li>
         <li class="nav-item">
-          <a class="nav-link navText" href="#"><b>Signup</b></a>
+          <a class="nav-link navText" routerLink="/account/registration">Signup</a>
         </li>
 
         <li class="nav-item active">
@@ -29,65 +32,67 @@
       </div>
       </div>
       </nav>
+  </div> 
+  <app-category></app-category>
+ -->
+
+ <nav class="navbar  navbar-expand-lg   border-dark navbar-light bg-light">
+  <div class="logo-img" *ngFor="let data of footerDetails">
+    <a class="navbar-brand"  routerLink="home/welcome">
+      <img [src]="data.logoImageName" class="logo">
+    </a>
   </div>
-
-
-
-
-
-  <!--         <li class="nav-item">
-              <a class="nav-link" href="#"><b>Home</b></a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+   <!--  <ul class="navbar-nav">
+      <div class="searchBox">
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline- my-2 my-sm-0" type="submit"><i class="fa fa-search text-white"></i>
+          </button>
+        </form>
+      </div>
+    </ul> -->
+    <div class="navbar-collapse collapse justify-content-end">
+      <ul class="navbar-nav">
+        <li><a routerLink="product/shopping" class="nav-link navText" href="#">Cart<span class="badge badge-light"></span>
+            {{this.sharedService.addToQty()}}</a>
+        </li>
+        <li class="dropdown" *ngIf="this.sharedService.getLogin()">
+  <a class="nav-link navText" (click)="navBarShow()" data-toggle="dropdown">{{this.sharedService.findName()}}<span
+              class="fa fa-angle-down"></span></a>
+          <ul class="dropdown-menu megaMenu" role="menu"
+           [ngClass]="{show: dropdownShow}">
+            <li class="nav-item">
+              <a class="nav-link navText" (click)="navBarShow()" 
+              routerLink="/account/profile">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><b>Contact</b></a>
+              <a class="nav-link navText" (click)="navBarShow()" 
+              routerLink="/account/listaddress">Address</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><b>Categories</b></a>
-            </li> -->
-
-
-<!-- <br>
-<br>
-<br>
-<div class="fixed-top">
-  <nav class="navbar navbar-expand-lg navbar-light justify-content-right"
-    style="background-color: rgb(255, 255, 255); height: 55px;">
-    <div class="logo-img">
-      <a class="navbar-brand">
-        <img src="../../../assets/img/logo/Logo.png" class="logo">
-      </a>
-    </div>
-    <div class="menus">
-      <div class="toogle">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav justify-content-center">
-
-            <li class="nav-item">
-              <a class="nav-link" href="#"><b>Home</b></a>
+              <a class="nav-link navText" (click)="navBarShow()" 
+              routerLink="/account/listcard">Card</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><b>Contact</b></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"><b>Categories</b></a>
+              <a class="nav-link navText" (click)="navBarShow()" 
+              routerLink="/account/order">My Orders</a>
             </li>
           </ul>
-          <nav class="navbar navbar-expand-lg  justify-content-end">
-            <ul class="navbar-nav " style="padding-left: 750px;">
-              <li class="nav-item">
-                <a class="nav-link navText" href="#"> <b>Login</b></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navText" href="#"><b>Signup</b></a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
+        </li>
+        <li class="nav-item" *ngIf="!this.sharedService.getLogin()">
+          <a class="nav-link navText" routerLink="/account/signin">Login</a>
+        </li>
+        <li class="nav-item" *ngIf="this.sharedService.getLogin()">
+            <a class="nav-link navText"(click)="logOut()">LogOut</a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link navText" routerLink="/account/registration">SignUp</a>
+        </li>
+      </ul>
     </div>
-  </nav>
-</div>
- -->
+  </div>
+</nav> 
+<app-category></app-category>
+
+
