--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-@import "~font-awesome/css/font-awesome.min.css";
+@import "~font-awesome/css/font-awesome.css";
+@import "./assets/styles/commonStyle.css";
+@import "./assets/styles/angularStyle.css";
+@import "./assets/styles/bootstrapOverride.css";
