--- a/src/app/home/promotion1/promotion1.component.html
+++ b/src/app/home/promotion1/promotion1.component.html
@@ -1,7 +1,7 @@
 <br>
 <br>
-<div class="promotion1" >
-  <h1 class="our-h1">{{promotionsModel[0].promotionTitle}}</h1>
+<div class="promotion1" > 
+  <h1 class="our-h1">{{promotionsModel[0]?.promotionTitle}}</h1>
   <br>
   <div class="container">
     <div class="row">
