--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -76,17 +76,18 @@
             </li>
             <li class="nav-item">
               <a class="nav-link navText" (click)="navBarShow()" 
-              routerLink="/account/order">My Orders</a>
+              routerLink="/account/bookings">My Bookings</a>
+            </li>
+            <li class="nav-item" >
+              <a class="nav-link navText"(click)="logOut()">LogOut</a>
             </li>
           </ul>
         </li>
         <li class="nav-item" *ngIf="!this.sharedService.getLogin()">
           <a class="nav-link navText" routerLink="/account/signin">Login</a>
         </li>
-        <li class="nav-item" *ngIf="this.sharedService.getLogin()">
-            <a class="nav-link navText"(click)="logOut()">LogOut</a>
-          </li>
-        <li class="nav-item">
+        
+        <li class="nav-item" *ngIf="!this.sharedService.getLogin()">
           <a class="nav-link navText" routerLink="/account/registration">SignUp</a>
         </li>
       </ul>
