--- a/src/app/product-management/place-order/place-order.component.html
+++ b/src/app/product-management/place-order/place-order.component.html
@@ -208,7 +208,7 @@
             <div class="col-md-6 ">
               <!-- <button class="btn btn-float-right card-footer" [disabled]="!orderForm.valid"
                 (click)="placeOrder(productModel, qtyValue.value)">Place Order</button> -->
-                <button mat-raised-button color="primary" [disabled]="!orderForm.valid"  class="btnn" (click)="placeOrder(totalpriceValue)">
+                <button mat-raised-button color="primary" [disabled]="!orderForm.valid"  class="btnn" (click)="placeBooking(totalpriceValue)">
                     Confirm Booking  </button>
             </div>
 
