--- a/src/app/account-info/account-details/account-details.component.html
+++ b/src/app/account-info/account-details/account-details.component.html
@@ -24,12 +24,12 @@
           </li>
           <li class="nav-item">
               <a class="nav-link active">
-                <h5>Order Details</h5><span class="sr-only">(current)</span>
+                <h5>Booking Details</h5><span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link navText" routerLink="/account/order">
-                  Order
+                <a class="nav-link navText" routerLink="/account/bookings">
+                  Bookings
                 </a>
               </li>
         </ul>
