--- a/src/app/account-info/signin/signin.component.html
+++ b/src/app/account-info/signin/signin.component.html
@@ -14,16 +14,16 @@
               <button mat-button matSuffix mat-icon-button aria-label="Mobile Number">
                 <mat-icon>phone</mat-icon>
               </button>
-              <mat-error *ngIf="signInForm.controls['mobileNumber'].errors?.required">
-                  MobileNumber is
-                  <strong>required</strong>
+              <mat-error *ngIf="signInForm.controls['mobileNumber'].errors">
+                  MobileNumber contains only
+                  <strong>number</strong>
                 </mat-error>
             </mat-form-field>
           </div>
           <div class="col-md-12">
             <mat-form-field>
               <mat-label>Password</mat-label>
-              <input matInput placeholder="Password" formControlName="password" required>
+              <input matInput placeholder="Password" formControlName="password" required type="password">
               <button mat-button matSuffix mat-icon-button aria-label="User Name">
                 <mat-icon>remove_red_eye</mat-icon>
               </button>
