--- a/src/app/product-management/product-list/product-list.component.css
+++ b/src/app/product-management/product-list/product-list.component.css
@@ -1,135 +1,125 @@
-.buyProduct {
-    width: 100%;
-    display: inherit;
-    align-items: inherit;
-    justify-content: inherit;
-    background-color: #bf0711
-}
-.displayBuyNow {
-    align-self: stretch;
-    display: flex;
-    background-color: rgb(255, 255, 255);
-    padding-left: 8px;
-    padding-right: 8px;
-    float: right
-}
-.selectedSort{
-    color:  #d2a679;
-    font-weight: bold;
-}
-ul {
-    list-style-type: none;
-  }
+
+
 .card-control{
-    padding: 18px;
-  
+    padding: 15px;
 }
 
-.card-footer{
-    width: 100%;
-    height: 250px;
-    background: rgb(255, 255, 255);
-    
-}
 
-.img-fluid{
-    
-    width: 230px;
-    height: 200px;
-    align-items: center;
-    padding-left: 12px;
-    padding-top: 20px;
-    padding: 10px;
-    padding-right: 15px;
- 
-}
-
-/* .card-title{
-    font-size: 20px;
-    padding-left: 25px;
-}
-.card-text{
-    padding-left: 25px;
-} */
-
-/* .paginator{
-
-    padding-bottom: 20px;
-    padding-top: 50px;
-} */
-.page-na{
-    padding-top: 95px;
-    width: 100%;
-    padding: 19px;
-    
-   
-}
-.paginator
-{
-    border: #bf0711;
-    border-radius: 22%;
-}
 .card-title{
-    font-size: 15px;
+    font-size: 16px;
     padding-left: 25px;
 }
 .card-text{
 padding-left: 25px;
 
 }
+
+
+
+
 .btnn{
 
 width: 120px;
 font-size: 14px;
-border: 2px;
-border-radius: 30px;
+background: rgb(236, 236, 236);
+}
+.btnn:hover{
+    background: rgb(146, 146, 146);
+}
 
-
-}
-.fa-1x{
-    color: rgb(0, 0, 0);
-    padding-left: 2px;
-    
-}
-.but-detail{
-   
-    padding-bottom: 90px;
-}
 .icon-fab{
-    padding-left: 0px;
+    padding-left: 40px;
     padding-right: 20px;
 }
 .Detail-View{
 width: 110px;
-border: 2px;
-border-radius: 30px;
+background: rgb(236, 236, 236);
+}
+.Detail-View:hover{
+    background: rgb(146, 146, 146);
+
+}
+.Detail-Views{
+    padding-left: 60px;
 }
 
+
 .zoom {
-    transition: transform .2s;
+    transition: transform .5s;
     margin: 0 auto;
   }
   
   .zoom:hover {
-    -ms-transform: scale(1.3);
-    -webkit-transform: scale(1.3); 
-    transform: scale(1.3); 
+
+    -ms-transform: scale(0.8);
+    -webkit-transform: scale(0.8); 
+    transform: scale(0.8); 
   }
 
-  .sidenav {
-    width: 130px;
-    position: fixed;
-    z-index: 1;
-    top: 20px;
-    left: 10px;
-    background: #eee;
-    overflow-x: hidden;
-    padding: 8px 0;
+/* 
+  .zoomss{
+    transition: transform .5s;
+    margin: 0 auto;
   }
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #2196F3;
-    display: block;
-  }
+  .zoomss:hover {
+    -ms-transform: scale(0.8);
+    -webkit-transform: scale(0.8); 
+    transform: scale(0.8); 
+
+  } */
+
+ .mtss{
+   background: rgb(233, 233, 233);
+   width: 100%;
+   height: 100%;
+ }
+
+ .img-fluid{
+    
+  width: 700px;
+  height: 280px;
+  align-items: center;
+  padding-left: 12px;
+  padding-top: 20px;
+  padding: 10px;
+  padding-right: 15px;
+
+}
+
+/* .Detail-Views {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  
+  overflow: hidden;
+  width: 100%;
+ 
+  transition: .5s ease;
+}
+
+.but-cart:hover .Detail-Views {
+  height: 100%;
+} */
+
+/* .but-cart {
+  position: static;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+.card-control:hover .but-cart {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+ */
