--- a/src/app/product-management/product-list/product-list.component.html
+++ b/src/app/product-management/product-list/product-list.component.html
@@ -1,9 +1,12 @@
 <div class="row">
-  <div class="col-md-9">
-    <div class="container-fluid mt-5">
+
+ 
+  <div class="col-md-12">
+    <div class="container-fluid">
       <mat-paginator [length]="totalSize" [hidePageSize]="true" [pageIndex]="currentPage"></mat-paginator>
       <div *ngIf="productModel$ | async as id">
           <div class="row">
+            <div class="col-md-12">
               <nav class="nav">
                 <a class="nav-link "><b>Sort By</b></a>
                 <div *ngFor="let data of sortBy">
@@ -12,13 +15,13 @@
                 </div>
               </nav>
             </div>
+            </div>
         <div class="row">
           <!-- List of Products -->
-          
-          <div class="col-sm-6" *ngFor="let product of productModel">
-            <div class="card-control">
-              <mat-card>
-                <div class="card">
+          <div class="col-md-4" *ngFor="let product of productModel">
+            <div class="card-control" >
+              <mat-card class="mtss">
+                <div>
                   <div class="zoom">
                     <img class="img-fluid" alt="smaple image" [src]="product.productImageName[0]" (click)="viewSingleProduct(product._id)">
                   </div>
@@ -27,27 +30,24 @@
                     <div>
                       <p class="card-text"><i class="fa fa-inr" aria-hidden="true"></i> {{ product.price }} </p>  
                     </div>
-                   
-                     
-                   
                   </div>
-               <!--    <div class="car-body">
+               <!-- <div class="car-body">
                     <h4 class="card-title">{{ product.productName }}</h4>
                     <div>
                       <p class="card-text"><i class="fa fa-inr" aria-hidden="true"></i> {{ product.price }}</p>
                     </div>
                   </div> -->
                 </div>
-                <div class="but-cart">
+                <div class="but-cart" >
                   <div class="row">
-                    <div class="col-md-5" style="padding-top: 5px;">
+                    <div class="col-md-5">
                         <div class="Detail-Views">
-                            <button mat-raised-button  class="Detail-View" (click)="viewSingleProduct(product._id)">Detail View</button>
+                            <button mat-stroked-button  class="Detail-View" (click)="viewSingleProduct(product._id)">Detail View</button>
                           </div>
                     </div>
-                    <div class="col-md-7" style="padding-top: 6px; padding-left: 20px;">
-                        <div class="icon-fab" >
-                            <button mat-raised-button  class="btnn" (click)="addToCart(product)">
+                    <div class="col-md-7" >
+                        <div class="icon-fab">
+                            <button mat-stroked-button  class="btnn" (click)="addToCart(product)">
                            Add to Cart <i class="fa fa-cart-plus fa-1x" aria-hidden="true"></i> </button>
                           </div>
                     </div>
@@ -55,14 +55,16 @@
                 </div>
 
                 <!-- <p class="card-text">{{ product.color }}</p> -->
-
                 <!--                   <div>
                     <p class="card-text">{{ product.material }}</p>
                   </div> -->
 
               </mat-card>
+            
             </div>
           </div>
+          <div class="col-sm-6"></div>
+
         </div>
         <div class="page-na">
           <mat-paginator #paginator [pageSize]="pageSize" [hidePageSize]="true" [pageSizeOptions]="[10, 100, 150]"
