--- a/src/app/account-info/registration/registration.component.html
+++ b/src/app/account-info/registration/registration.component.html
@@ -3,6 +3,7 @@
     <div class="col-md-4">
 
     </div>
+    <mat-card class="highwa">
     <div class="col-md-4 registerCard">
       {{holder?.result }}
       <h5 class="cartHeader">Signup</h5>
@@ -39,54 +40,15 @@
           </mat-form-field>
         </div>
         <div class="col-md-12">
-          <button class="registerButton" mat-raised-button color="primary" type="submit">Register</button>
+          <div class="regis-btn">
+          <button class="registerButton" mat-stroked-button  type="submit">Register</button>
+        </div>
         </div>
       </div>
     </div>
+  </mat-card>
     <div class="col-md-4">
 
     </div>
 
   </div>
-  <!--  <div class="col-md-10">
-      <form [formGroup]="regForm" (ngSubmit)="onSubmit()" novalidate style="padding-top:60px">
-        <div>
-          <mat-form-field class="example-full-width">
-            <input matInput placeholder="email" formControlName="emailId" [required]="false">
-            <button mat-button matSuffix mat-icon-button aria-label="email">
-              <mat-icon>location_on</mat-icon>
-            </button>
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field class="example-full-width">
-            <input matInput placeholder="Mobile Number" maxlength="10"
-             formControlName="mobileNumber" required>
-            <button mat-button matSuffix mat-icon-button aria-label="Mobile Number">
-              <mat-icon>phone</mat-icon>
-            </button>
-            <mat-error *ngIf="regForm.controls['mobileNumber'].errors?.required">
-              Mobile Number is
-              <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-
-
-        <div>
-          <mat-form-field class="example-full-width">
-            <input matInput placeholder="Password" formControlName="password" required>
-            <button mat-button matSuffix mat-icon-button aria-label="User Name">
-              <mat-icon>remove_red_eye</mat-icon>
-            </button>
-            <mat-error *ngIf="regForm.controls['password'].errors?.required">
-              Password is
-              <strong>required</strong>
-            </mat-error>
-          </mat-form-field>
-        </div>
-        <button mat-raised-button color="secondary" type="reset">Reset</button>
-        <button mat-raised-button color="primary" type="submit">Register</button>
-      </form>
-    </div> -->
-</form>
