--- a/src/app/product-management/product-list/product-list.component.html
+++ b/src/app/product-management/product-list/product-list.component.html
@@ -1,6 +1,4 @@
 <div class="row">
-
- 
   <div class="col-md-12">
     <div class="container-fluid">
       <mat-paginator [length]="totalSize" [hidePageSize]="true" [pageIndex]="currentPage"></mat-paginator>
@@ -11,16 +9,17 @@
                 <a class="nav-link "><b>Sort By</b></a>
                 <div *ngFor="let data of sortBy">
                   <li class="nav-link " [class.selectedSort]="data.type === selectedSortVal" (click)="sortType(data.type)">
-                    <b> {{data.value}}</b></li>
+                    <b>{{data.value}}</b></li>
                 </div>
               </nav>
             </div>
             </div>
+
         <div class="row">
           <!-- List of Products -->
           <div class="col-md-4" *ngFor="let product of productModel">
             <div class="card-control" >
-              <mat-card class="mtss">
+              <div class="mtss">
                 <div>
                   <div class="zoom">
                     <img class="img-fluid" alt="smaple image" [src]="product.productImageName[0]" (click)="viewSingleProduct(product._id)">
@@ -42,13 +41,13 @@
                   <div class="row">
                     <div class="col-md-5">
                         <div class="Detail-Views">
-                            <button mat-stroked-button  class="Detail-View" (click)="viewSingleProduct(product._id)">Detail View</button>
+                            <div  mat-stroked-button  class="Detail-View" (click)="viewSingleProduct(product._id)">Detail View</div>
                           </div>
                     </div>
                     <div class="col-md-7" >
                         <div class="icon-fab">
-                            <button mat-stroked-button  class="btnn" (click)="addToCart(product)">
-                           Add to Cart <i class="fa fa-cart-plus fa-1x" aria-hidden="true"></i> </button>
+                            <div mat-stroked-button  class="btnn" (click)="addToCart(product)">
+                          Add to Cart <i class="fa fa-cart-plus fa-1x" aria-hidden="true"></i> </div>
                           </div>
                     </div>
                   </div>
@@ -59,13 +58,14 @@
                     <p class="card-text">{{ product.material }}</p>
                   </div> -->
 
-              </mat-card>
+              </div>
             
             </div>
           </div>
           <div class="col-sm-6"></div>
-
         </div>
+
+        
         <div class="page-na">
           <mat-paginator #paginator [pageSize]="pageSize" [hidePageSize]="true" [pageSizeOptions]="[10, 100, 150]"
             [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)"
