--- a/src/app/product-management/product-detail/product-detail.component.html
+++ b/src/app/product-management/product-detail/product-detail.component.html
@@ -35,13 +35,13 @@
   </div>
   <br>
   <div class="row gridRow">
-    <div class="col-12 col-md-12 col-lg-12">
+   <!--  <div class="col-12 col-md-12 col-lg-12">
       <div class="var-btnn">
         
           <h2 class="relatedSection">Similar Products</h2>
         
       </div>
-    </div>
+    </div> -->
     <div class="col-6 col-sm-3 col-md-3 col-lg-2 pointerImage" *ngFor="let data of relatedProducts">
       <div class="card-var">
         <a (click)="relatedProduct(data)">
