--- a/src/app/product-management/product-list/product-list.component.html
+++ b/src/app/product-management/product-list/product-list.component.html
@@ -27,7 +27,7 @@
                   <div class="car-body">
                     <h4 class="card-title">{{ product.productName }}</h4>
                     <div>
-                      <p class="card-text"><i class="fa fa-inr" aria-hidden="true"></i> {{ product.price }} </p>  
+                      <p class="card-text"><i class="fa fa-inr" aria-hidden="true"></i> ₹ {{ product.price }} </p>  
                     </div>
                   </div>
                <!-- <div class="car-body">
