--- a/src/app/home/banner/banner.component.css
+++ b/src/app/home/banner/banner.component.css
@@ -1,19 +1,41 @@
-
   
 @media screen and (max-width: 600px) {
-    .imageSize
-    {
-        width: 100%;
-        height: 200px;
-    } 
-  }
+  .imageSize
+  {
+      width: 100%;
+      height: 200px;
+  } 
+}
 
-  @media screen and (min-width: 600px) {
-    .imageSize
-    {
-        width: 100%;
-        height: 500px;
-    } 
-    
-  }
+@media screen and (min-width: 600px) {
+  .imageSize
+  {
+      width: 100%;
+      height: 500px;
+  } 
+  
+}
 
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 20px;
+  margin-top: -22px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-size: 35px;
+  transition: 1s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: contain;
+  display: block;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
