--- a/src/app/home/promotion1/promotion1.component.html
+++ b/src/app/home/promotion1/promotion1.component.html
@@ -8,10 +8,10 @@
       <div class="col-md-3 col-6 names" *ngFor="let data of promotionsModel[0].joinedtable">
 
 
-        <img [src]="data.productImageName[0]" style="width:210px;height: 237px">
+        <img [src]="data.productImageName[0]" style="width:210px;height: 237px" (click)="detailView(data.productId)">
         <b>{{data.productName}}</b>
         <br>
-        {{data.price}}
+        ₹ {{data.price}}
 
 
       </div>
