--- a/src/app/home/category-content/category-content.component.css
+++ b/src/app/home/category-content/category-content.component.css
@@ -1,22 +1,76 @@
-.explore-h3{
+.explore-h3 {
     text-align: center;
     color: rgb(71, 71, 71);
-}
-
-.cat-img{
+  }
+  
+  .cat-img {
     padding-left: 20px;
     padding-top: 10px;
     margin: 3px;
     border: 10px;
     border-radius: 200px;
-}
-
-.cat-names{
-    padding-left: 15px; 
+  }
+  
+  .cat-names {
+    padding-left: 14px;
     font-size: 13px;
     color: rgb(90, 90, 90);
-}
-
-.img-fluid{
-    width: 50px;
-}
+  }
+  
+  .img-fluid {
+  
+    width: 160px;
+    box-shadow: 0 0px 0px 0 #00000063, 0 0px 2px 0 rgba(0, 0, 0, .19);
+  
+    background: rgb(255, 255, 255);
+    height: 130px;
+  }
+  
+  
+  .explore-h3 {
+    margin-top: 100%;
+    margin-bottom: 10px;
+  }
+  
+  h3 {
+    display: flex;
+    width: 40%px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  
+  h3:before,
+  h3:after {
+    content: '';
+    border-top: 2px solid;
+    margin: 0 20px 0 0;
+    flex: 1 0 20px;
+  }
+  
+  h3:after {
+    margin: 0 0 0 20px;
+  }
+  
+  h3 {
+  
+    margin-top: 40px;
+  }
+  
+  .gridCon {
+    margin-top: 40px;
+  }
+  
+  .cat-names { 
+    margin-left: 50px;
+  }
+  .jumbotron {
+    margin-top: 20px;
+    box-shadow: 0 0px 0px 0 #00000063, 0 0px 12px 0 rgba(0, 0, 0, .19);
+    border: 3px;
+    border-radius: 30px;
+  
+  }
+  h6{
+    font-weight: 400;
+  }
