--- a/src/app/home/category-content/category-content.component.html
+++ b/src/app/home/category-content/category-content.component.html
@@ -1,20 +1,25 @@
-<h3 class="explore-h3">Explore Our Furniture Range</h3>
-<br>
-<br>
-
-<div class="container">
-  <div class="jumbotron bg-light">
+<h3>Explore Our Furniture Range</h3>
+<div class="container gridCon"> 
+  <div>
+      <div class="jumbotron" >
+          <div class="title">
+               <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-5" >
+                   <!--  <h3>Explore Our Furniture Range</h3> -->
+                </div>
+                <div class="col-md-4"></div>
+              </div>
+            </div> 
     <div class="row">
       <div class="col-md-2 col-6" *ngFor="let category of categoryModel">
         <div class="cat-img">
-          <img [src]="category.categoryImageName" class="img-fluid">
-        </div>
-        <div class="cat-names">
-          {{category.categoryName}}
+          <img [src]="category.categoryImageName" class="img-fluid" >
+              <b><h6 style="margin-left: 30px; padding-top: 10px; color: rgb(255, 0, 0);">{{category.categoryName}}</h6></b>
         </div>
 
       </div>
     </div>
   </div>
+  </div>
 </div>
-<br><br>
