--- a/src/app/home/promotion1/promotion1.component.css
+++ b/src/app/home/promotion1/promotion1.component.css
@@ -1,37 +1,81 @@
 
 
- @media screen and (max-width: 600px) 
- {
- 
-.one{
-        align-content: center;
-        text-align: center;
-        font-size: 30px;
-      
-    }
-.names
-{
-    text-align: center;
-    font-size: 13px;
-
- }
-
-   }
-@media screen and (min-width: 600px) {
- 
 .names
 {
     text-align: center;
     font-size: 20px;
-
  }
     
 .our-h1{
     align-content: center;
     text-align: center;
     font-size: 30px;
+}
+
+/* .promotion1{
+    width: 880px;
+    padding-top: 40px;
+    padding-left: 50px;
+    box-shadow: 0 1px 28px 0 #00000033, 0 1px 2px 0 rgba(0, 0, 0, .19);
+    margin-bottom: 10px;
+    background: rgb(255, 255, 255);
+    height: 260px;
+} */
+.gridImg{
+    width: 1480px;
+    padding-top: 40px;
+    box-shadow: 0 1px 03px 0 #00000063, 0 1px 2px 0 rgba(0, 0, 0, .19);
+    margin-bottom: 10px;
+    background: rgb(255, 255, 255);
+    height: 370px;
     
 }
-
+.promotion1{
+    padding-left: 25px;
 
 }
+.img-responsive{    
+    width:330px;height: 230px;
+    box-shadow: 0 1px 09px 0 #00000063, 0 1px 2px 0 rgba(0, 0, 0, .19);
+}
+/* .promoImg{
+    background: rgb(189, 131, 131);
+    width: 280px;
+    padding-top: 40px;
+    padding-left: 150px;
+    box-shadow: 0 1px 03px 0 #00000063, 0 1px 2px 0 rgba(0, 0, 0, .19);
+    margin-bottom: 10px;
+    background: rgb(255, 255, 255);
+    height: 330px;
+
+} */
+
+h3 {
+    display: flex;
+    width: 40%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  
+  h3:before,
+  h3:after {
+    content: '';
+    border-top: 2px solid;
+    margin: 0 20px 0 0;
+    flex: 1 0 20px;
+  }
+  
+  h3:after {
+    margin: 0 0 0 20px;
+  }
+  h3{
+   /*  box-shadow: 0 0px 0px 0 #00000063, 0 0px 2px 0 rgba(0, 0, 0, .19); */
+/* background: rgb(255, 255, 255);   */
+margin-top: 40px;
+margin-left: 400px;
+  }
+
+  h6{
+      color: red;
+  }
