--- a/src/app/home/promotion2/promotion2.component.html
+++ b/src/app/home/promotion2/promotion2.component.html
@@ -1,23 +1,32 @@
-<br>
-<br>
-<br>
-<h1 class="hot-h1" class="pro-name">HOT PRODUCTS</h1>
-<div class="container">
-  <div class="row" style="background-color: rgb(255, 255, 255);">
-    <div class="col-md-6">
-      <div class="proimg">
-        <img [src]="productsModel[0].adsImageName" class="img-fluid">
-      </div>
+<div class="row">
+  <div class="col-md-4 gridPro">
+   
+  </div>
+  <div class="col-md-4">
+    <div class="hot-h1">
+        
+        <h2> HOT PRODUCTS</h2>
     </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="hot-h1"></div>
+
+  </div>
+</div>
+<div class="container ">
+  <div class="row gridIm">
+    <div class="col-md-6">
+      <img [src]="productsModel[0].adsImageName" class="img-fluid">
+    </div>
+
     <div class="col-md-6">
       <div class="row">
-        <div class="col-md-6" *ngFor="let product of productsModel">
+        <div class="col-md-6 gridImga" *ngFor="let product of productsModel" style=" padding-top: 8px;">
           <div class="imgs">
-            <img [src]="product.adsImageName" class="fluid-imgss">         
+            <img [src]="product.adsImageName" class="img-responsive">
+            fluid-imgss
           </div>
-         <!--  <div class="pro-names">
-              {{product.name}}
-          </div> -->
         </div>
         <div class="col-md-6">
         </div>
