--- a/src/app/home/subscribe/subscribe.component.html
+++ b/src/app/home/subscribe/subscribe.component.html
@@ -1,43 +1,44 @@
 <br>
-<br>
-<h1 class="subs">Get Discount Info</h1>
-<p class="tagp">
-    Subscribe to the Outstock mailing list to
-    receive updates on
-    new arrivals, special
-    offers and other discount
-    information.</p>
-
 <div class="container">
+<div class="jumbotron gridJump">
+        <h1 class="subs">Get Discount Info</h1>
+        <p class="tagp">
+                Subscribe to the Outstock mailing list to
+                receive updates on
+                new arrivals, special
+                offers and other discount
+                information.</p>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4">            
+<!--                 <p class="tagp">
+                    Subscribe to the Outstock mailing list to
+                    receive updates on
+                    new arrivals, special
+                    offers and other discount
+                    information.</p> -->
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" style="margin-bottom: 1px;">
             <form>
                 <div class="form-group">
                     <label for="comment"></label>
                     <textarea class="form-control" rows="5" id="comment"
-                        placeholder="Subscribe to our newsletter..."></textarea>
+                        placeholder="Subscribe to our newsletter"></textarea>
                     <br>
+           
                     <div class="button" style="padding-right: 30px;">
                         <div class="row">
                             <div class="col-md-4"></div>
-
-
                             <div class="col-md-4" style="padding-right: 40px;">
-                                <button type="button" class="btn btn-dark btn-sm"
-                                    style="width:120px; "><b>Submit</b></button>
+                                <div type="button" class="btn-sm"  style="width:120px;"><b>Submit</b></div>  
                             </div>
                             <div class="col-md-4"></div>
                         </div>
-
                     </div>
-
                 </div>
-
             </form>
-
         </div>
         <div class="col-md-4"></div>
     </div>
 </div>
+</div>
+<br>
