--- a/src/app/product-management/product-detail-view/product-detail-view.component.html
+++ b/src/app/product-management/product-detail-view/product-detail-view.component.html
@@ -68,13 +68,13 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 col-6">
+   <!--    <div class="col-md-3 col-6">
         <div class="btnss">
           <div class="btn btn-float-right card-footers" (click)="buySingleProducts(productModel._id)">
             <b>Book Now</b>
           </div>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </div>
