--- a/src/app/product-management/product-list/product-list.component.css
+++ b/src/app/product-management/product-list/product-list.component.css
@@ -11,8 +11,6 @@
   padding-left: 25px;
 
 }
-
-
 .btnn {
   
   box-shadow: 0 1px 28px 0 #00000063, 0 1px 2px 0 rgba(0, 0, 0, .19);
@@ -29,9 +27,9 @@
 
 }
 .Detail-View {
-  box-shadow: 0 1px 28px 0 #00000063, 0 1px 2px 0 rgba(0, 0, 0, .19);
+  box-shadow: 0 1px 8px 0 #00000063, 0 1px 2px 0 rgba(0, 0, 0, .19);
   background-color: rgb(156, 155, 155);
-  margin-bottom: 10px;
+  
   width: 120px;
   font-size: 14px;
   height: 40px;
@@ -59,13 +57,10 @@
   padding-left: 40px;
   padding-right: 20px;
 }
-
-
 .zoom {
   transition: transform .5s;
   margin: 5 auto;
 }
-
 .zoom:hover {
 
   -ms-transform: scale(0.8);
@@ -156,4 +151,11 @@
 
 b:hover {
   color: rgb(25, 25, 117);
+}
+.selectedSort{
+  color:  #e40101;
+  font-weight: bold;
+}
+.card-text{
+  color: red;
 }
