--- a/src/app/product-management/shopping-cart/shopping-cart.component.html
+++ b/src/app/product-management/shopping-cart/shopping-cart.component.html
@@ -1,21 +1,27 @@
+<div class="row grid">
+</div>
 <div class="m-5">
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-8"> 
+      <!--cart img-->
       <div class="row gridImage" *ngFor="let data of shopModel">
-        <div class="col-md-2"><img class="img-fluid" [src]="data?.productImageName">
-        </div>
-        <div class="col-md-3">
-          <h4 class="product-name"><strong>{{data?.productName }}</strong></h4>
-          <h4><small>{{data?.productDescription}}</small></h4>
-          <h4><small>{{data?.price}} </small></h4>
-         
-
-        </div>
-        
         <div class="col-md-2">
+          <img class="img-responsive" [src]="data?.productImageName">
+        </div>
+        <!---img end-->
+        <!---cart details-->
+        <div class="col-md-3">
+          <div class="three">
+            <h4 class="product-name"><strong>{{data?.productName }}</strong></h4>
+            <h4><small>{{data?.productDescription}}</small></h4>
+            <h4><small>{{data?.price}} ₹ </small></h4>
+          </div>
+        </div>
+        <!---details End-->
+        <div class="col-md-3" style=" padding-top: 20px;">
           <div class="input-group">
             <span class="input-group-btn">
-              <button type="button" class="btn btn-default btn-number" (click)="action('min', data)"
+              <button type="button" class="btn btn-default btn-num" (click)="action('min', data)"
                 [disabled]="data.set < 0">
                 <span>-</span>
               </button>
@@ -29,13 +35,19 @@
             </span>
           </div>
         </div>
-        <div class="col-md-2">
-          <button type="button" class="btn btn-default btn-number" (click)="action('clear', data)">
-            Delete
-          </button>
+        <div class="col-md-1">
+          <div class="prize">
+            <div class="cart-num">
+              <h6>{{data.set * data.price }} ₹</h6>
+            </div>
+          </div>
         </div>
-        <div class="col-md-2">
-          {{data.set * data.price }}
+        <div class="col-md-3">
+          <div class="delete">
+            <button type="button" class="btn btn-default btn-numbers" (click)="action('clear', data)">
+              Delete
+            </button>
+          </div>
         </div>
 
       </div>
@@ -44,19 +56,24 @@
         Your Cart is Empty
       </div>
     </div>
-    <div class="col-md-2" *ngIf="shopModel?.length !== 0">
-      <div class="row gridImage">
-        <div class="col-md-12"> Order Summary</div>
-        <div class="col-md-12 pull-right">
-          <strong>Total: {{total()}}</strong>
-        </div>
-        <div class="col-md-12 pull-right">
-            <button mat-raised-button color="primary"  class="btnn" (click)="placeOrder()">
-               Continue Shopping  </button>
+
+
+    <div class="col-md-4" *ngIf="shopModel?.length !== 0" style="padding-top: 185px; padding-left: 200px; ">
+      <div class="gridI">
+
+        <div class="row " >
+          <div class="col-md-12"> Order Summary</div>
+
+          <div class="col-md-12 pull-right">
+            <strong>Total: {{total()}} ₹</strong>
           </div>
+          <div class="col-md-12 pull-rights">
+            <div color="primary" class="btnn" (click)="placeOrder()">
+              Continue Shopping </div>
+          </div>
+        </div>
       </div>
     </div>
+
   </div>
-
-
 </div>
