--- a/src/app/shared/category/category.component.css
+++ b/src/app/shared/category/category.component.css
@@ -1,10 +1,31 @@
 .selected {
-    background-color: #CFD8DC !important;
-    color: white;
-    
-  }
+  background-color: rgb(255, 255, 255) !important;
+  color: white;
+  box-shadow: 0 1px 3px 0 #0000004f, 0 0px 88px 0 rgba(0, 0, 0, .19);
 
-  
-  .bg-light {
-    background-color: #f5f5f5!important;
+
+}
+
+.bg-light {
+  background-color: #e6e6e6 !important;
+}
+
+.dropdown-item:active {
+  background-color: #282f43 !important;
+}
+
+.dropdown-item:focus,
+.dropdown-item:hover {
+  color: rgb(189, 3, 3) !important;
+  text-decoration: none;
+  background-color: #c9c9c9 !important;
+  box-shadow: 0 1px 3px 0 #0000004f, 0 0px 88px 0 rgba(0, 0, 0, .19);
+  border: 8px;
+/*   border-radius: 5px; */
+  font-weight: 800;
+
+
+}
+.dropdown-item{
+  text-align: center;
 }
