--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -2,7 +2,7 @@
 <app-banner></app-banner>
 <app-category-content></app-category-content>
  <app-promotion1></app-promotion1> 
-
+<app-ads></app-ads>
 <app-promotion2></app-promotion2>
 <app-review></app-review>
 <app-strip></app-strip>
