--- a/src/app/home/category-content/category-content.component.html
+++ b/src/app/home/category-content/category-content.component.html
@@ -1,4 +1,4 @@
-<h3>Explore Our Furniture Range</h3>
+<!-- <h3>Explore Our Furniture Range</h3>
 <div class="container gridCon"> 
   <div>
       <div class="jumbotron" >
@@ -6,12 +6,11 @@
                <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-5" >
-                   <!--  <h3>Explore Our Furniture Range</h3> -->
                 </div>
                 <div class="col-md-4"></div>
               </div>
             </div> 
-    <div class="row">
+    <div class="row" >
       <div class="col-md-2 col-6" *ngFor="let category of categoryModel">
         <div class="cat-img">
           <img [src]="category.categoryImageName" class="img-fluid" >
@@ -21,5 +20,17 @@
       </div>
     </div>
   </div>
+  </div>
+</div> -->
+
+<div class="container gridCon">
+  <h3>Explore Our Furniture Range</h3>
+  <div class="row">
+    <div class="col-md-2 col-6" *ngFor="let category of categoryModel" style="padding-left: 20px;">
+      <div class="cat-img">
+        <img [src]="category.categoryImageName" class="img-fluid">
+      </div>
+      <h6>{{category.categoryName}}</h6>
+    </div>
   </div>
 </div>
