--- a/src/app/home/promotion2/promotion2.component.css
+++ b/src/app/home/promotion2/promotion2.component.css
@@ -1,80 +1,72 @@
-.img-fluid {
-  width: 635px;
-  height: 630px;
-
- 
-}
-
-.img-responsive {
-  width: 250px;
-  height: 280px;
-  padding-left: 10px;
-  
-  padding-top: 10px;
-
-}
-  .pro-name {
+.names
+{
     text-align: center;
-    font-size: 25px;
-    padding-right: 60px;
-    font-weight: bolder;
-
-  }
-
-  .pro-names {
-    font-size: 17px;
-    font-weight: bolder;
-    color: rgba(0, 0, 0, 0.788);
-    padding-left: 30px;
-    padding-right: 10px;
-    padding-top: 10px;
-    width: 75px;
-    height: 18px;
-    background: #ffffff;
-    margin: -15px 0 0 -50px;
-    padding: 5px 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    line-height: 18px;
+    font-size: 20px;
+ }
+    
+.our-h1{
+    align-content: center;
     text-align: center;
+    font-size: 30px;
+}
+
+
+.gridImg{
+    width: 1480px;
+    padding-top: 40px;
+/*     box-shadow: 0 1px 03px 0 #00000063, 0 1px 2px 0 rgba(0, 0, 0, .19); */
+    margin-bottom: 10px;
+    background: rgb(255, 255, 255);
+    height: 370px;
+    
+}
+
+.img-responsive{ 
+
+    width:280px;
+    height: 190px;
+    padding: 38px;
+   
+}
+h3 {
+    display: flex;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: open;
+    padding-left: 550px;
+    margin-top: 50px;
   }
-
-  .pro-name {
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
-
-
-
-.gridImga{
- width: 100px;
-}
-h2 {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-h2:before,
-h2:after {
-  content: '';
-  border-top: 2px solid;
-  margin: 0 20px 0 0;
-  flex: 2 0 20px;
-}
-
-h2:after {
-  margin: 0 0 0 20px;
-}
-h2{
-color: gray;
-margin-top: 10px;
-margin-bottom: 40px;
-}
-.gridPro{
   
-  padding-left: 80px;
+  h3:before,
+  h3:after {
+    content: '';
+    border-top: 1px solid;
+    margin: 0 10px 0 0;
+    flex: 1 0 20px;
+  }
+  
+  h3:after {
+    margin: 0 0 0 20px;
+  }
+/*   h3{
+margin-top: 40px;
+margin-left: 150px;
+color: #232323;
+font-family: open;
+
+  } */
+
+  h6{
+      color: red;
+      text-align: center;
+  }
+
+.naMe{
+    font-size: 18px;        
+}
+.h1H{
+    text-align: center;
+    padding-left: 5px;
 }
