--- a/src/app/home/promotion2/promotion2.component.html
+++ b/src/app/home/promotion2/promotion2.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-4 gridPro">
    
   </div>
@@ -30,6 +30,23 @@
         </div>
         <div class="col-md-6">
         </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<div class="promotion1"> 
+  <h1 class="our-h1"><h3>{{promotionsModel[1]?.promotionTitle}}</h3></h1>
+  <br>
+  <div>
+    <div class="row gridImg">
+      <div class="col-md-3 col-3 names" *ngFor="let data of promotionsModel[1]?.joinedtable" >
+        <div class="promoImg" >
+        <img [src]="data?.productImageName[0]"  class="img-responsive">
+      </div>
+      <h6 class="proName">  {{data.productName}}</h6>
+        <br>
+       <h6>₹ {{data.price}}  </h6>
       </div>
     </div>
   </div>
