--- a/src/app/home/subscribe/subscribe.component.css
+++ b/src/app/home/subscribe/subscribe.component.css
@@ -42,3 +42,38 @@
     opacity:50px;
 
 }
+
+
+.icon-fab {
+    /* padding-left: 20px; */
+    padding-right: 20px;
+  }
+
+  .btnn {
+  
+    box-shadow: 0 1px 28px 0 #00000063, 0 1px 2px 0 rgba(0, 0, 0, .19);
+    background-color: rgb(156, 155, 155);
+    margin-bottom: 10px;
+    width: 120px;
+    font-size: 14px;
+    height: 40px;
+    text-align: center;
+    padding-top: 10px;
+    font-weight: bolder;
+    color: rgb(0, 0, 0);
+  
+  
+  }
+  
+.button5 {
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;
+    width: 130px;
+    height: 40px;
+  }
+  
+  .button5:hover {
+    background-color: #555555;
+    color: white;
+  }
