--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -85,12 +85,12 @@
         </div>
       </div>
       <div class="col-xs-12 col-6 col-md-2">
-        <h6>About Us</h6>
-        <!-- <ul class="list-unstyled">
+        <h6>The Company</h6>
+        <ul class="list-unstyled">
           <li><a href="maintenance.html">About Us</a></li>
-      
-          <li><a href="about.html">Terms & Conditions</a></li>
-        </ul> -->
+      <!-- 
+          <li><a href="about.html">Terms & Conditions</a></li> -->
+        </ul>
       </div>
       <div class="col-xs-12 col-6 col-md-2">
         <h6>Information </h6>
